@@ -54,6 +54,7 @@
 #define JSON_CONSTANTS_KEY_DIAGRAM "diagram"
 #define JSON_CONSTANTS_KEY_DIAGRAM_ID "id"
 #define JSON_CONSTANTS_KEY_DIAGRAM_PARENT_ID "parent_id"
+#define JSON_CONSTANTS_KEY_DIAGRAM_PARENT_NAME "parent_name"
 #define JSON_CONSTANTS_KEY_DIAGRAM_PARENT "parent"
 #define JSON_CONSTANTS_KEY_DIAGRAM_DIAGRAM_TYPE "diagram_type"
 #define JSON_CONSTANTS_KEY_DIAGRAM_DIAGRAM_TYPE_NAME "type"
@@ -61,13 +62,17 @@
 #define JSON_CONSTANTS_KEY_DIAGRAM_DESCRIPTION "description"
 #define JSON_CONSTANTS_KEY_DIAGRAM_LIST_ORDER "list_order"
 #define JSON_CONSTANTS_KEY_DIAGRAM_DISPLAY_FLAGS "display_flags"
+#define JSON_CONSTANTS_KEY_DIAGRAM_DISPLAY_FLAG_NAMES "display_tags"
 #define JSON_CONSTANTS_KEY_DIAGRAM_ELEMENTS "diagramelements"
 
 #define JSON_CONSTANTS_KEY_DIAGRAMELEMENT_ID "id"
 #define JSON_CONSTANTS_KEY_DIAGRAMELEMENT_DIAGRAM_ID "diagram_id"
 #define JSON_CONSTANTS_KEY_DIAGRAMELEMENT_CLASSIFIER_ID "classifier_id"
+#define JSON_CONSTANTS_KEY_DIAGRAMELEMENT_CLASSIFIER_NAME "classifier_name"
 #define JSON_CONSTANTS_KEY_DIAGRAMELEMENT_FOCUSED_FEATURE_ID "focused_feature_id"
+#define JSON_CONSTANTS_KEY_DIAGRAMELEMENT_FOCUSED_FEATURE_NAME "focused_feature_name"
 #define JSON_CONSTANTS_KEY_DIAGRAMELEMENT_DISPLAY_FLAGS "display_flags"
+#define JSON_CONSTANTS_KEY_DIAGRAMELEMENT_DISPLAY_FLAG_NAMES "display_tags"
 #define JSON_CONSTANTS_KEY_DIAGRAMELEMENT_NODE "node"
 
 #define JSON_CONSTANTS_KEY_CLASSIFIER "classifier"
