@@ -526,6 +526,10 @@ u8_error_t json_element_reader_get_next_diagram ( json_element_reader_t *this_,
                         result = json_token_reader_read_int_value ( &((*this_).tokenizer), &ignored_integer );
                         (void) ignored_integer;
                     }
+                    else if ( utf8stringbuf_equals_str( member_name, JSON_CONSTANTS_KEY_DIAGRAM_PARENT_NAME ) )
+                    {
+                        result = json_element_reader_skip_next_string( this_ );
+                    }
                     else if ( utf8stringbuf_equals_str( member_name, JSON_CONSTANTS_KEY_DIAGRAM_DIAGRAM_TYPE ) )
                     {
                         int64_t parsed_integer;
@@ -561,6 +565,10 @@ u8_error_t json_element_reader_get_next_diagram ( json_element_reader_t *this_,
                         int64_t parsed_integer;
                         result = json_token_reader_read_int_value( &((*this_).tokenizer), &parsed_integer );
                         data_diagram_set_display_flags ( out_object, parsed_integer );
+                    }
+                    else if ( utf8stringbuf_equals_str( member_name, JSON_CONSTANTS_KEY_DIAGRAM_DISPLAY_FLAG_NAMES ) )
+                    {
+                        result = json_element_reader_skip_next_string( this_ );
                     }
                     else if ( utf8stringbuf_equals_str( member_name, JSON_CONSTANTS_KEY_DIAGRAM_PARENT ) )
                     {
@@ -1129,17 +1137,29 @@ u8_error_t json_element_reader_get_next_diagramelement( json_element_reader_t *t
                         result = json_token_reader_read_int_value ( &((*this_).tokenizer), &parsed_integer );
                         data_diagramelement_set_classifier_row_id ( out_object, parsed_integer );
                     }
+                    else if ( utf8stringbuf_equals_str( member_name, JSON_CONSTANTS_KEY_DIAGRAMELEMENT_CLASSIFIER_NAME ) )
+                    {
+                        result = json_element_reader_skip_next_string( this_ );
+                    }
                     else if ( utf8stringbuf_equals_str( member_name, JSON_CONSTANTS_KEY_DIAGRAMELEMENT_FOCUSED_FEATURE_ID ) )
                     {
                         int64_t parsed_integer;
                         result = json_token_reader_read_int_value ( &((*this_).tokenizer), &parsed_integer );
                         data_diagramelement_set_focused_feature_row_id ( out_object, parsed_integer );
                     }
+                    else if ( utf8stringbuf_equals_str( member_name, JSON_CONSTANTS_KEY_DIAGRAMELEMENT_FOCUSED_FEATURE_NAME ) )
+                    {
+                        result = json_element_reader_skip_next_string( this_ );
+                    }
                     else if ( utf8stringbuf_equals_str( member_name, JSON_CONSTANTS_KEY_DIAGRAMELEMENT_DISPLAY_FLAGS ) )
                     {
                         int64_t parsed_integer;
                         result = json_token_reader_read_int_value ( &((*this_).tokenizer), &parsed_integer );
                         data_diagramelement_set_display_flags ( out_object, parsed_integer );
+                    }
+                    else if ( utf8stringbuf_equals_str( member_name, JSON_CONSTANTS_KEY_DIAGRAMELEMENT_DISPLAY_FLAG_NAMES ) )
+                    {
+                        result = json_element_reader_skip_next_string( this_ );
                     }
                     else if ( utf8stringbuf_equals_str( member_name, JSON_CONSTANTS_KEY_DIAGRAMELEMENT_NODE ) )
                     {
